Init: Add ASP.NET Core MVC project and ApplicationDbContext
Feature: Add models (Lecturer, Claim, SupportingDocument) and EF Core setup

Feature: Add HomeController and SubmitClaim (file upload) functionality

Feature: Add Coordinator and Manager approval views/actions

Test: Add xUnit tests and InMemory EF tests

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,8 +5,7 @@
 <style>
     body {
         /* Use the full path to your local image */
-        background-image: url('file:///C:/Users/RC_Student_lab/source/repos/Sup.jpg');
-        background-size: cover;
+        <img src="/images/Sup.jpg" class="background-img" alt="Background Image" /> background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center;
